Add index and app files and create API docs

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Microservice built in NodeJS to CRUD pets.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1049.0",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
     "swagger-jsdoc": "^6.1.0",
